# MCOTS-2

./: .env.example  .gitignore  ARCHITECTURE.md  INSTANT_DEMO.md  QUICK_START.md  README-AUTH.md  README.md  USER_GUIDE.md  VISUAL-DEMO-GUIDE.md  backend-logic-complete.md  check-current-units.sh  check-units.sh  demo-instant-battle.sh  demo-offensive-battle.sh  docker-compose.yml  example.env  firepower-fix.md  mermaid-architecture.md  package-lock.json  startup.md  test-auth.sh  test-demo.sh  test-new-units.md  test-stage2-characteristics.md  test-unit-creation.sh
backend/: .gitignore  docker-compose.yml  example.env
backend/auth-service/: .mavenrc  Dockerfile  pom.xml
backend/intelligence-service/: Dockerfile  main.py  pyproject.toml  requirements.txt
backend/intelligence-service/api/: router.py
backend/intelligence-service/core/: config.py
backend/map-service/: Dockerfile  pom.xml
frontend/: .env.example  Dockerfile  example.env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: UkraineMap.jsx
frontend/src/components/Account/: UserAccount.jsx
frontend/src/enums/: ActionPriority.jsx  ActionStatus.jsx  ActionType.jsx  ApiUrl.jsx  Faction.jsx  ObstacleType.jsx  UnitConfigs.jsx  UnitRank.jsx  UnitType.jsx
frontend/src/services/: api.js  authService.js  battleHistoryService.js  fireControlService.js  formationService.js  replayService.js  websocket.js
frontend/src/styles/: main.css
frontend/src/utils/: apiHelpers.js  calculations.js  colors.js
(+161 files in other folders)
