[tool.poetry]
name = "mcots-intelligence-service"
version = "0.1.0"
description = ""
authors = ["Intelligence Team"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.0"
uvicorn = "^0.34.0"
pydantic-settings = "^2.8.0"
groq = "^0.4.0"
httpx = "<0.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"